fix(date-picker): kept text in month select from getting cut off

--- a/src/patternfly/patternfly-date-picker.scss
+++ b/src/patternfly/patternfly-date-picker.scss
@@ -87,6 +87,7 @@
     background-color: var(--pf-c-date-picker__flatpickr__month-select--BackgroundColor);
     font-weight: var(--pf-c-date-picker__flatpickr__month-select--FontWeight);
     padding-right: var(--pf-c-date-picker__flatpickr__month-select--PaddingRight);
+    line-height: var(--pf-c-date-picker__flatpickr__month-select--LineHeight);
   }
 
   .flatpickr-current-month .flatpickr-monthDropdown-months:hover {
